style: Fixed z-index header

--- a/frontend/styles/Navbar.module.scss
+++ b/frontend/styles/Navbar.module.scss
@@ -5,6 +5,7 @@
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 998;
 }
 #menu-wrapper {
   .menu-icon {
